feature add get my user
